# ecloop

./: CMakeLists.txt  Makefile  build.bat  main.c  readme.md
.github/workflows/: ci.yml
lib/: ecc.c  utils.c
